Update JavaTips.md